--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       </header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-          
+          <a class="navbar-brand" href="#"><img src="logo.png" class=" d-block d-sm-none d-md-none d-sm-block d-md-block d-lg-none" height="40px" width="40px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,7 +46,7 @@
             </div>
           </nav>
     <section id="tartalom">
-        <h1 class="text-center" id="cim"> Bla Bla</h1>
+        <h1 class="text-center" id="cim">FŐOLDAL</h1>
       </section>
       <section>
 
