--- a/informaciok.html
+++ b/informaciok.html
@@ -52,9 +52,23 @@
      
           <div class="col-md">
             <h1 class="text-center" id="alcim"> OLDAL DOKUK</h1>
+            <div class="col">
+              <button id="gomb">Felhasználói</button>
+              <button id="gomb">Fejlesztői</button>
+              <button id="gomb">Tesztelői</button>
+              <button id="gomb">Prezentáció</button>
+
+            </div>
           </div>
           <div class="col-md">
             <h1 class="text-center" id="alcim"> JÁTÉK DOKUK</h1>
+            <div class="col">
+              <button id="gomb">Felhasználói</button>
+              <button id="gomb">Fejlesztői</button>
+              <button id="gomb">Tesztelői</button>
+              <button id="gomb">Prezentáció</button>
+
+            </div>
           </div>
         </div>
       </section>
