--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       </header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-          <a class="navbar-brand" href="#"><img src="logo.png" class=" d-block d-sm-none d-md-none d-sm-block d-md-block d-lg-none" height="40px" width="40px"></a>
+          <a class="navbar-brand" href="#"><img src="feherlogo.png" class=" d-block d-sm-none d-md-none d-sm-block d-md-block d-lg-none" height="40px" width="40px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,12 +46,62 @@
             </div>
           </nav>
     <section id="tartalom">
-        <h1 class="text-center" id="cim">FŐOLDAL</h1>
+        <h1 class="text-center" id="cim">FŐOLDAL</h1><br>
+        <div class="row">
+          <div id="szoveg">
+              <span><center>Üdvözöllek a weboldalon!</center></span>
+              Ezt az oldalt a "Gépészeti 2077" játék miatt hoztuk létre.<br>
+              És mint látjátok, a dizájn ugyan olyan mint a gépészeti.hu-oldalé.<br>
+              Azért ilyen mivel suli témájú a projekt.
+          </div>
+        </div>
+        <br>
+     
       </section>
-      <section>
-
-      </section>
+<section id="jatekrol">
+  <h1 class="text-center" id="cim"> JÁTÉKKÉPEK</h1>
+  <br>
+  <div id="carousel">
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://i.pinimg.com/originals/89/e3/7d/89e37d9611818e81f65d368d0350e5c7.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://i.pinimg.com/originals/89/e3/7d/89e37d9611818e81f65d368d0350e5c7.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://i.pinimg.com/originals/89/e3/7d/89e37d9611818e81f65d368d0350e5c7.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+   <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </button>
+  </div>
+</div>
+</section>
      <footer>
+      <ul>
+        <li>
+          © 2023 Gépészeti 2077<br>
+  
+4700 Erdély, Magyar út 69.<br>
+
+<b>Telefon:</b> (69) 666-669;<br>
+
+<b>Fax:</b> (69) 696-969<br>
+
+<b>E-mail:</b> azkomgec@gmail.com;<br>
+        </li>
+      </ul>
+     
+
+
      </footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
