--- a/informaciok.html
+++ b/informaciok.html
@@ -13,12 +13,12 @@
 </head>
 <body>
     <div id="egesz">
-      <header>
+      <header class="d-none d-xl-block">
             <a href="" onclick="alert('Igen')"><img src="gepeszlogo.png"> </a>
 
       </header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-          
+          <a class="navbar-brand" href="#"><img src="feherlogo.png" class=" d-block d-sm-none d-md-none d-sm-block d-md-block d-lg-none" height="40px" width="40px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,33 +46,38 @@
             </div>
           </nav>
     <section id="tartalom">
-        <h1 class="text-center" id="cim"> INFORMÁCIÓK</h1>
+        <h1 class="text-center" id="cim"> INFORMÁCIÓK</h1>     <br>
+
         <br>
         <div class="row">
      
-          <div class="col-md">
+          <div class="col-md" id="doboz">
             <h1 class="text-center" id="alcim"> OLDAL DOKUK</h1>
             <div class="col">
-              <button id="gomb">Felhasználói</button>
-              <button id="gomb">Fejlesztői</button>
-              <button id="gomb">Tesztelői</button>
-              <button id="gomb">Prezentáció</button>
+              <a href="" target="_blank"><button id="gomb">Felhasználói</button></a>
+              <a href="" target="_blank"><button id="gomb">Fejlesztői</button></a>
+              <a href="" target="_blank"><button id="gomb">Tesztelői</button></a>
+              <a href="" target="_blank"><button id="gomb">Prezentáció</button></a>
 
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-md"  id="doboz">
             <h1 class="text-center" id="alcim"> JÁTÉK DOKUK</h1>
             <div class="col">
-              <button id="gomb">Felhasználói</button>
-              <button id="gomb">Fejlesztői</button>
-              <button id="gomb">Tesztelői</button>
-              <button id="gomb">Prezentáció</button>
+              <a href="" target="_blank"><button id="gomb">Felhasználói</button></a>
+              <a href="" target="_blank"><button id="gomb">Fejlesztői</button></a>
+              <a href="" target="_blank"><button id="gomb">Tesztelői</button></a>
+              <a href="" target="_blank"><button id="gomb">Prezentáció</button></a>
 
             </div>
           </div>
         </div>
+        <div id="szoveg">
+          <span><center>Figyelem!</center></span>
+          Az oldalon található információk tájékoztatő jellegűek.
+        </div>
       </section>
-      <section>
+      <section id="valami">
 
       </section>
      <footer>
