--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
   </div>
 </div>
 </section>
+<section id="letoltes"><br>
+  <h1 class="text-center" id="cim">LETÖLTÉS</h1><br>
+
+  <hr>
+  <div id="szoveg">
+    <span><center>Készen állsz?</center></span>
+    Itt letöltheted a játékoz:<br><br>
+    <a href="" target="_blank"><button id="gomb">Letöltöm a játékot</button></a><br><br>
+    <hr>
+</div>
+</section>
      <footer>
       <ul>
         <li>
