--- a/letoltes.html
+++ b/letoltes.html
@@ -58,6 +58,7 @@
               <a href="https://www.python.org/downloads/" target="_blank"><button id="gomb">Python</button></a>
             </div>
           </div>
+          <hr class=" d-block d-sm-none d-md-none d-sm-block d-md-block d-lg-none">
           <div class="col-md"  id="doboz">
             <h1 class="text-center" id="alcim">A JÁTÉK</h1>
             <div class="col">
@@ -65,6 +66,7 @@
 
             </div>
           </div>
+          <hr class=" d-block d-sm-none d-md-none d-sm-block d-md-block d-lg-none">
           <div class="col-md"  id="doboz">
             <h1 class="text-center" id="alcim">EZT OLVASD EL</h1>
             <div class="col">
@@ -72,6 +74,7 @@
             </div>
           </div>
         </div>
+        <br>
         <hr>
         <div id="szoveg">
           <span><center>Figyelem!</center></span>
