--- a/informaciok.html
+++ b/informaciok.html
@@ -61,6 +61,15 @@
 
             </div>
           </div>
+          <hr class=" d-block d-sm-none d-md-none d-sm-block d-md-block d-lg-none">
+          <div class="col-md"  id="doboz">
+            <h1 class="text-center" id="alcim"> PREZENTÁCIÓ</h1>
+            <div class="col">
+              <a href="" target="_blank"><button id="gomb">Játék/oldal prezi</button></a>
+
+            </div>
+          </div>
+          <hr class=" d-block d-sm-none d-md-none d-sm-block d-md-block d-lg-none">
           <div class="col-md"  id="doboz">
             <h1 class="text-center" id="alcim"> JÁTÉK DOKUK</h1>
             <div class="col">
@@ -71,7 +80,9 @@
 
             </div>
           </div>
+
         </div>
+        <br>
         <hr>
         <div id="szoveg">
           <span><center>Figyelem!</center></span>
