--- a/letoltes.html
+++ b/letoltes.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
     <script src="./bootstrap/js/bootstrap.min.js"></script>
-    <script src="./scriptek/script.js"></script>
     <link rel="stylesheet" href="./stilus/style.css">
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <title>LETÖLTÉS</title>
@@ -62,7 +61,7 @@
           <div class="col-md"  id="doboz">
             <h1 class="text-center" id="alcim">A JÁTÉK</h1>
             <div class="col">
-              <a href="" target="_blank"><button id="gomb">Gépészeti 2077</button></a>
+              <a href="https://www.mediafire.com/file/d8lg0hgv00qg38g/Game.zip/file" target="_blank"><button id="gomb">Gépészeti 2077</button></a>
 
             </div>
           </div>
@@ -70,7 +69,7 @@
           <div class="col-md"  id="doboz">
             <h1 class="text-center" id="alcim">EZT OLVASD EL</h1>
             <div class="col">
-              <a href="" target="_blank"><button id="gomb">Felhasználói Dokumentáció</button></a>
+              <a href="https://www.mediafire.com/file/nh49byk50g2pta8/jatek_felhasznaloi.docx/file" target="_blank"><button id="gomb">Felhasználói Dokumentáció</button></a>
             </div>
           </div>
         </div>
