--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
     <script src="./bootstrap/js/bootstrap.min.js"></script>
-    <script src="./scriptek/script.js"></script>
     <link rel="stylesheet" href="./stilus/style.css">
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <title>GÉPÉSZETI 2077</title>
@@ -14,7 +13,7 @@
 <body>
     <div id="egesz">
       <header class="d-none d-xl-block">
-            <a href="" onclick="alert('Igen')"><img src="gepeszlogo.png"> </a>
+            <a href=""><img src="gepeszlogo.png"> </a>
 
       </header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-light">
@@ -79,7 +78,7 @@
     </div>
    <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
+      <span class="sr-only">Previous</span> 
     </button>
     <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -95,7 +94,7 @@
   <div id="szoveg">
     <span><center>Készen állsz?</center></span>
     Itt letöltheted a játékoz:<br><br>
-    <a href="" target="_blank"><button id="gomb">Letöltöm a játékot</button></a><br><br>
+    <a href="letoltes.html"><button id="gomb">Letöltöm a játékot</button></a><br><br>
     <hr>
 </div>
 </section>
