--- a/informaciok.html
+++ b/informaciok.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
     <script src="./bootstrap/js/bootstrap.min.js"></script>
-    <script src="./scriptek/script.js"></script>
     <link rel="stylesheet" href="./stilus/style.css">
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <title>INFORMÁCIÓK</title>
@@ -46,7 +45,7 @@
             </div>
           </nav>
     <section id="tartalom">
-        <h1 class="text-center" id="cim"> INFORMÁCIÓK</h1>     <br>
+        <h1 class="text-center" id="cim"> INFORMÁCIÓK</h1>     <br> 
 
         <br>
         <div class="row">
@@ -54,18 +53,20 @@
           <div class="col-md" id="doboz">
             <h1 class="text-center" id="alcim"> OLDAL DOKUK</h1>
             <div class="col">
-              <a href="" target="_blank"><button id="gomb">Felhasználói</button></a>
-              <a href="" target="_blank"><button id="gomb">Fejlesztői</button></a>
-              <a href="" target="_blank"><button id="gomb">Tesztelői</button></a>
-              <a href="" target="_blank"><button id="gomb">Prezentáció</button></a>
+              <a href="https://www.mediafire.com/file/9g1qvsmsyuqqrpi/G%25C3%2589P%25C3%2589SZETI_2077_felh.docx/file" target="_blank"><button id="gomb">Felhasználói</button></a>
+              <a href="https://www.mediafire.com/file/qxxaauxgy8os6ae/G%25C3%2589P%25C3%2589SZETI_2077_fejl.docx/file" target="_blank"><button id="gomb">Fejlesztői</button></a>
+              <a href="https://www.mediafire.com/file/ypeww7raws0flal/G%25C3%2589P%25C3%2589SZETI_2077_teszt.docx/file" target="_blank"><button id="gomb">Tesztelői</button></a>
+              <a href="https://www.mediafire.com/file/byrytaxw5kx4ray/G%25C3%2589P%25C3%2589SZETI_2077_oldaldokuk.zip/file" target="_blank"><button id="gomb">Összes</button></a>
 
             </div>
           </div>
           <hr class=" d-block d-sm-none d-md-none d-sm-block d-md-block d-lg-none">
           <div class="col-md"  id="doboz">
-            <h1 class="text-center" id="alcim"> PREZENTÁCIÓ</h1>
+            <h1 class="text-center" id="alcim"> EGYEBEK</h1>
             <div class="col">
-              <a href="" target="_blank"><button id="gomb">Játék/oldal prezi</button></a>
+              <a href="https://www.mediafire.com/file/35xmk3w3g2ejr1v/G%25C3%25A9p%25C3%25A9sz_l%25C3%25A9gk%25C3%25B6r.pptx/file" target="_blank"><button id="gomb">Játék prezi</button></a>
+              <a href="https://www.mediafire.com/file/sx848mi9lfssh1b/gepeszeti2077.pptx/file" target="_blank"><button id="gomb">Oldal prezi</button></a>
+              <a href="https://www.mediafire.com/file/etcs3pot2zzjwyn/V%25C3%25A9lem%25C3%25A9nyek.zip/file" target="_blank"><button id="gomb">Vélemények </button></a>
 
             </div>
           </div>
@@ -73,10 +74,10 @@
           <div class="col-md"  id="doboz">
             <h1 class="text-center" id="alcim"> JÁTÉK DOKUK</h1>
             <div class="col">
-              <a href="" target="_blank"><button id="gomb">Felhasználói</button></a>
-              <a href="" target="_blank"><button id="gomb">Fejlesztői</button></a>
-              <a href="" target="_blank"><button id="gomb">Tesztelői</button></a>
-              <a href="" target="_blank"><button id="gomb">Prezentáció</button></a>
+              <a href="https://www.mediafire.com/file/nh49byk50g2pta8/jatek_felhasznaloi.docx/file" target="_blank"><button id="gomb">Felhasználói</button></a>
+              <a href="https://www.mediafire.com/file/qvy0t1uuc4jf0ga/jatek_fejlesztoi.docx/file" target="_blank"><button id="gomb">Fejlesztői</button></a>
+              <a href="https://www.mediafire.com/file/bpfo18713pst3d2/jatek_teszteloi.docx/file" target="_blank"><button id="gomb">Tesztelői</button></a>
+              <a href="https://www.mediafire.com/file/eyal834531yksh5/jatekdokuk.zip/file" target="_blank"><button id="gomb">Összes</button></a>
 
             </div>
           </div>
