--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <script src="./bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./stilus/style.css">
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+  <meta property="og:url" content="https://www.yauko.site/gepeszeti2077.github.io">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="GÉPÉSZETI 2077">
+  <meta property="og:description" content="Ahol a cickányok és a diákok 1v1-eznek">
+  <meta property="og:image" content="qe">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="yauko.site">
+  <meta property="twitter:url" content="https://www.yauko.site/gepeszeti2077.github.io">
+  <meta name="twitter:title" content="GÉPÉSZETI 2077">
+  <meta name="twitter:description" content="Ahol a cickányok és a diákok 1v1-eznek">
+  <meta name="twitter:image" content="qe">
+
     <title>GÉPÉSZETI 2077</title>
 </head>
 <body>
@@ -67,13 +79,13 @@
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://i.pinimg.com/originals/89/e3/7d/89e37d9611818e81f65d368d0350e5c7.jpg" class="d-block w-100" alt="...">
+        <img src="elsokep.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="https://i.pinimg.com/originals/89/e3/7d/89e37d9611818e81f65d368d0350e5c7.jpg" class="d-block w-100" alt="...">
+        <img src="masodkep.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="https://i.pinimg.com/originals/89/e3/7d/89e37d9611818e81f65d368d0350e5c7.jpg" class="d-block w-100" alt="...">
+        <img src="harmadkep.png" class="d-block w-100" alt="...">
       </div>
     </div>
    <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
