--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="GÉPÉSZETI 2077">
   <meta property="og:description" content="Ahol a cickányok és a diákok 1v1-eznek">
-  <meta property="og:image" content="qe">
+  <meta property="og:image" content="gepeszoldal.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="yauko.site">
   <meta property="twitter:url" content="https://www.yauko.site/gepeszeti2077.github.io">
   <meta name="twitter:title" content="GÉPÉSZETI 2077">
   <meta name="twitter:description" content="Ahol a cickányok és a diákok 1v1-eznek">
-  <meta name="twitter:image" content="qe">
+  <meta name="twitter:image" content="gepeszoldal.png">
 
     <title>GÉPÉSZETI 2077</title>
 </head>
