--- a/informaciok.html
+++ b/informaciok.html
@@ -53,10 +53,10 @@
           <div class="col-md" id="doboz">
             <h1 class="text-center" id="alcim"> OLDAL DOKUK</h1>
             <div class="col">
-              <a href="https://www.mediafire.com/file/9g1qvsmsyuqqrpi/G%25C3%2589P%25C3%2589SZETI_2077_felh.docx/file" target="_blank"><button id="gomb">Felhasználói</button></a>
-              <a href="https://www.mediafire.com/file/qxxaauxgy8os6ae/G%25C3%2589P%25C3%2589SZETI_2077_fejl.docx/file" target="_blank"><button id="gomb">Fejlesztői</button></a>
-              <a href="https://www.mediafire.com/file/ypeww7raws0flal/G%25C3%2589P%25C3%2589SZETI_2077_teszt.docx/file" target="_blank"><button id="gomb">Tesztelői</button></a>
-              <a href="https://www.mediafire.com/file/byrytaxw5kx4ray/G%25C3%2589P%25C3%2589SZETI_2077_oldaldokuk.zip/file" target="_blank"><button id="gomb">Összes</button></a>
+              <a href="#" onclick="alert('Projekt státusza: Befejezve')"><button id="gomb">Felhasználói</button></a>
+              <a href="#" onclick="alert('Projekt státusza: Befejezve')"><button id="gomb">Fejlesztői</button></a>
+              <a href="#" onclick="alert('Projekt státusza: Befejezve')"><button id="gomb">Tesztelői</button></a>
+              <a href="#" onclick="alert('Projekt státusza: Befejezve')"><button id="gomb">Összes</button></a>
 
             </div>
           </div>
@@ -64,9 +64,9 @@
           <div class="col-md"  id="doboz">
             <h1 class="text-center" id="alcim"> EGYEBEK</h1>
             <div class="col">
-              <a href="https://www.mediafire.com/file/35xmk3w3g2ejr1v/G%25C3%25A9p%25C3%25A9sz_l%25C3%25A9gk%25C3%25B6r.pptx/file" target="_blank"><button id="gomb">Játék prezi</button></a>
-              <a href="https://www.mediafire.com/file/sx848mi9lfssh1b/gepeszeti2077.pptx/file" target="_blank"><button id="gomb">Oldal prezi</button></a>
-              <a href="https://www.mediafire.com/file/etcs3pot2zzjwyn/V%25C3%25A9lem%25C3%25A9nyek.zip/file" target="_blank"><button id="gomb">Vélemények </button></a>
+              <a href="#" onclick="alert('Projekt státusza: Befejezve')"><button id="gomb">Játék prezi</button></a>
+              <a href="#" onclick="alert('Projekt státusza: Befejezve')"><button id="gomb">Oldal prezi</button></a>
+              <a href="#" onclick="alert('Projekt státusza: Befejezve')"><button id="gomb">Vélemények </button></a>
 
             </div>
           </div>
@@ -74,10 +74,10 @@
           <div class="col-md"  id="doboz">
             <h1 class="text-center" id="alcim"> JÁTÉK DOKUK</h1>
             <div class="col">
-              <a href="https://www.mediafire.com/file/nh49byk50g2pta8/jatek_felhasznaloi.docx/file" target="_blank"><button id="gomb">Felhasználói</button></a>
-              <a href="https://www.mediafire.com/file/qvy0t1uuc4jf0ga/jatek_fejlesztoi.docx/file" target="_blank"><button id="gomb">Fejlesztői</button></a>
-              <a href="https://www.mediafire.com/file/bpfo18713pst3d2/jatek_teszteloi.docx/file" target="_blank"><button id="gomb">Tesztelői</button></a>
-              <a href="https://www.mediafire.com/file/eyal834531yksh5/jatekdokuk.zip/file" target="_blank"><button id="gomb">Összes</button></a>
+              <a href="#" onclick="alert('Projekt státusza: Befejezve')"><button id="gomb">Felhasználói</button></a>
+              <a href="#" onclick="alert('Projekt státusza: Befejezve')"><button id="gomb">Fejlesztői</button></a>
+              <a href="#" onclick="alert('Projekt státusza: Befejezve')"><button id="gomb">Tesztelői</button></a>
+              <a href="#" onclick="alert('Projekt státusza: Befejezve')"><button id="gomb">Összes</button></a>
 
             </div>
           </div>
