--- a/letoltes.html
+++ b/letoltes.html
@@ -61,7 +61,7 @@
           <div class="col-md"  id="doboz">
             <h1 class="text-center" id="alcim">A JÁTÉK</h1>
             <div class="col">
-              <a href="https://www.mediafire.com/file/d8lg0hgv00qg38g/Game.zip/file" target="_blank"><button id="gomb">Gépészeti 2077</button></a>
+              <a href="#" onclick="alert('Projekt státusza: Befejezve')"><button id="gomb">Gépészeti 2077</button></a>
 
             </div>
           </div>
@@ -69,7 +69,7 @@
           <div class="col-md"  id="doboz">
             <h1 class="text-center" id="alcim">EZT OLVASD EL</h1>
             <div class="col">
-              <a href="https://www.mediafire.com/file/nh49byk50g2pta8/jatek_felhasznaloi.docx/file" target="_blank"><button id="gomb">Felhasználói Dokumentáció</button></a>
+              <a href="#" onclick="alert('Projekt státusza: Befejezve')"><button id="gomb">Felhasználói Dokumentáció</button></a>
             </div>
           </div>
         </div>
